--- a/spring-boot-rest-service/src/main/resources/application.properties
+++ b/spring-boot-rest-service/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 server.context-path=/api
 logging.level.org.springframework=debug
 logging.level.com.springboot=debug
+#In case you want to use resouse bundle message srouce programmatically Use below to 
+# avoid configure resourceBundleMessageSrouce programmatically. 
+spring.messages.basename=message 
