Adding Swagger and other configuartion

--- a/spring-boot-rest-service/src/main/resources/application.properties
+++ b/spring-boot-rest-service/src/main/resources/application.properties
@@ -1,6 +1,14 @@
 server.context-path=/api
-logging.level.org.springframework=debug
+logging.level.org.springframework=info
 logging.level.com.springboot=debug
 #In case you want to use resouse bundle message srouce programmatically Use below to 
 # avoid configure resourceBundleMessageSrouce programmatically. 
 spring.messages.basename=message 
+
+# this is not working in 1.5. but this may work in 2.0
+management.endpoints.web.exposure.include=*
+
+security.user.name=user
+security.user.password=password
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
